outputs/tsp_constructive-constructive/ab-mcts-ahd/2025-09-22_21-21-05/evaluations/problem_eval-272818177800961053_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance" metric derived from the average distances to remaining nodes. It also employs a non-linear global weight that grows exponentially with remaining nodes to prioritize strategic transitions early in the search.}
              ^
SyntaxError: unterminated string literal (detected at line 1)

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance" metric derived from the average distances to remaining nodes. It also employs a non-linear global weight that grows exponentially with remaining nodes to prioritize strategic transitions early in the search.}
              ^
SyntaxError: unterminated string literal (detected at line 1)
